Any in output expressions outputs the matched input

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -97,7 +97,7 @@ ScrollLock >> Boss
   (Win Control Alt){R} >> reboot_machine
 
   # pass other Windows key combinations unmapped
-  Win{Any}             >> Any
+  Win{Any}             >> Win{Any}
 
   # colemak layout mapping (on german layout)
   AltGr{I}             >> !AltGr BracketLeft      # ü
@@ -152,10 +152,6 @@ ScrollLock >> Boss
   Slash                >> Shift{7}
 
   # default mappings for abstract commands
-  open_terminal        >> Any
-  suspend_machine      >> Any
-  poweroff_machine     >> Any
-  reboot_machine       >> Any
   close_window         >> !Win Alt{F4}
   navigate_escape      >> Escape
   cursor_home          >> !Control Home
@@ -175,7 +171,11 @@ ScrollLock >> Boss
 
 # system/application specific mappings for abstract commands
 [system="Linux"]
+  suspend_machine      >> (Win Control Alt){S}
+  poweroff_machine     >> (Win Control Alt){P}
+  reboot_machine       >> (Win Control Alt){R}
   lower_window         >> !Win (Alt Shift){PageDown}
+  open_terminal        >> Win{C}
 
 [system="Linux" class="Thunar"]
   cursor_home          >> Backspace
