--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Setup Linux/gcc-8
       if: runner.os == 'Linux'
       run: |
+        sudo apt-get update
         sudo apt-get install libudev-dev libusb-1.0-0-dev libx11-dev libdbus-1-dev libwayland-dev
         sudo apt-get install g++-8
         echo 'CC=gcc-8' >> $GITHUB_ENV
@@ -59,3 +60,4 @@ jobs:
       with:
         file: "*.zip;*.tar.gz;*.msi"
         tags: true
+        draft: false
