Fix keymapperd.service for some linux distributions

--- a/extra/lib/systemd/system/keymapperd.service
+++ b/extra/lib/systemd/system/keymapperd.service
@@ -2,7 +2,7 @@
 Description=Keymapper Daemon
 
 [Service]
-ExecStart=keymapperd
+ExecStart=/bin/sh -c "keymapperd"
 
 [Install]
 WantedBy=multi-user.target
