Added DEB packaging to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,10 +196,12 @@ endif()
 
 # package
 set(CPACK_PACKAGE_NAME "keymapper")
+set(CPACK_PACKAGE_DESCRIPTION "A cross-platform context-aware key remapper")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "keymapper")
 set(CPACK_PACKAGE_VENDOR "Albert Kalchmair")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Keymapper")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/houmain/keymapper")
+set(CPACK_PACKAGE_CONTACT ${CPACK_PACKAGE_HOMEPAGE_URL})
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
@@ -224,6 +226,10 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   string(REPLACE "\n" "\\par" LICENSE_RTF "${LICENSE_RTF}")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf" "{\\rtf1\\ansi\\deff0\\nouicompat{\\fonttbl{\\f0\\fnil\\fcharset0 Sans Serif;}}\\fs18 ${LICENSE_RTF} }")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf")
+else()
+  #set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0")
+  set(CPACK_DEBIAN_PACKAGE_SECTION utils)
 endif()
 
 include(CPack)
