Not enforcing major.minor.build version number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,6 @@ if(NOT VERSION AND GIT_FOUND)
                   OUTPUT_VARIABLE VERSION
                   OUTPUT_STRIP_TRAILING_WHITESPACE)
 endif()
-if(NOT VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
-    message(WARNING "Could not get version from git repository (defaulting to VERSION=0.0.0).")
-    set(VERSION "0.0.0")
-endif()
 configure_file("src/common/version.h.in" "${CMAKE_SOURCE_DIR}/src/common/_version.h")
 
 set(CMAKE_CXX_STANDARD 17)
@@ -207,10 +203,12 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
  
 set(CPACK_STRIP_FILES TRUE)
-string(REGEX MATCHALL "[0-9]+" VERSION_LIST "${VERSION}")
-list(GET VERSION_LIST 0 CPACK_PACKAGE_VERSION_MAJOR)
-list(GET VERSION_LIST 1 CPACK_PACKAGE_VERSION_MINOR)
-list(GET VERSION_LIST 2 CPACK_PACKAGE_VERSION_PATCH)
+if(VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
+  string(REGEX MATCHALL "[0-9]+" VERSION_LIST "${VERSION}")
+  list(GET VERSION_LIST 0 CPACK_PACKAGE_VERSION_MAJOR)
+  list(GET VERSION_LIST 1 CPACK_PACKAGE_VERSION_MINOR)
+  list(GET VERSION_LIST 2 CPACK_PACKAGE_VERSION_PATCH)
+endif()
 
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   set(CPACK_GENERATOR WIX)
