--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,9 +247,11 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf" "{\\rtf1\\ansi\\deff0\\nouicompat{\\fonttbl{\\f0\\fnil\\fcharset0 Sans Serif;}}\\fs18 ${LICENSE_RTF} }")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
-  #set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0")
   set(CPACK_DEBIAN_PACKAGE_SECTION utils)
+elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+  set(CPACK_GENERATOR "DragNDrop")
+  set(CPACK_DMG_VOLUME_NAME "${PROJECT_NAME}")
 endif()
 
 include(CPack)
