Added extra/keymapper-launchd script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,8 +214,9 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   install(DIRECTORY extra/share DESTINATION . COMPONENT Application)
   install(DIRECTORY extra/lib DESTINATION . COMPONENT Application)
 elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
-  install(TARGETS keymapper DESTINATION . COMPONENT Application)
-  install(TARGETS keymapperd DESTINATION . COMPONENT Application)
+  install(TARGETS keymapper DESTINATION "bin" COMPONENT Application)
+  install(TARGETS keymapperd DESTINATION "bin" COMPONENT Application)
+  install(FILES extra/keymapper-launchd PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION "bin" COMPONENT Application)
 else()
   install(TARGETS keymapper DESTINATION . COMPONENT Application)
   install(TARGETS keymapperd DESTINATION . COMPONENT Application)
