--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,7 +216,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
   install(TARGETS keymapper DESTINATION "bin" COMPONENT Application)
   install(TARGETS keymapperd DESTINATION "bin" COMPONENT Application)
-  install(FILES extra/keymapper-launchd PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION "bin" COMPONENT Application)
+  install(FILES extra/keymapper-launchd PERMISSIONS WORLD_EXECUTE OWNER_WRITE WORLD_READ DESTINATION "bin" COMPONENT Application)
 else()
   install(TARGETS keymapper DESTINATION . COMPONENT Application)
   install(TARGETS keymapperd DESTINATION . COMPONENT Application)
