Fixed executing terminal commands on wlroots based Wayland compositor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   option(ENABLE_X11 "Enable X11 context awareness" TRUE)
   if(ENABLE_X11)
     target_compile_definitions(keymapper PRIVATE ENABLE_X11)
-    target_link_libraries(keymapper X11 xkbcommon)
+    target_link_libraries(keymapper X11)
   endif()
 
   option(ENABLE_DBUS "Enable D-Bus context update support" TRUE)
@@ -150,7 +150,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
     wayland_generate_proto(${CMAKE_SOURCE_DIR}/src/client/unix/wlr-foreign-toplevel-management-unstable-v1.xml)
     wayland_proto_library(wayland-proto wlr-foreign-toplevel-management-unstable-v1)
     target_compile_definitions(keymapper PRIVATE ENABLE_WAYLAND)
-    target_link_libraries(keymapper wayland-proto)
+    target_link_libraries(keymapper wayland-proto xkbcommon)
   endif()
 
   if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
