--- a/keymapper.conf
+++ b/keymapper.conf
@@ -53,10 +53,11 @@ ScrollLock >> Boss
   Ext{Space}           >> Space
   Ext{M}               >> Enter
 
-  Ext{X}               >> Control{X}
-  Ext{C}               >> Control{C}
+  Ext{X}               >> edit_cut
+  Ext{C}               >> edit_copy
   Ext{V}               >> edit_paste
   Ext{E}               >> Control{F}
+  Ext{Z}               >> edit_undo
   (Ext Shift){Z}       >> edit_redo
   Ext{Z}               >> Control{Y}
 
@@ -99,59 +100,67 @@ ScrollLock >> Boss
   # pass other Windows key combinations unmapped
   Win{Any}             >> Win{Any}
 
-  # colemak layout mapping (on german layout)
-  AltGr{I}             >> !AltGr BracketLeft      # ü
-  AltGr{A}             >> !AltGr Quote            # ä
-  AltGr{Semicolon}     >> !AltGr Semicolon        # ö
-  AltGr{D}             >> !AltGr Minus            # ß
-  AltGr{Backquote}     >> !AltGr Shift{Backquote} # °
+  # colemak layout mapping
+  AltGr{I}                 >> 'ü'
+  (Shift AltGr){I}         >> 'Ü'
+  AltGr{A}                 >> 'ä'
+  (Shift AltGr){A}         >> 'Ä'
+  AltGr{Semicolon}         >> 'ö'
+  (Shift AltGr){Semicolon} >> 'Ö'
+  AltGr{D}                 >> 'ß'
+  AltGr{Backquote}         >> '°'
+  
+  E                        >> F
+  R                        >> P
+  T                        >> G
+  Y                        >> J
+  U                        >> L
+  I                        >> U
+  O                        >> Z
+  Z                        >> Y
+  Shift{P}                 >> ':'
+  P                        >> ';'
+  S                        >> R
+  D                        >> S
+  F                        >> T
+  G                        >> D
+  J                        >> N
+  K                        >> E
+  L                        >> I
+  Semicolon                >> O
+  N                        >> K
 
-  E                    >> F
-  R                    >> P
-  T                    >> G
-  Y                    >> J
-  U                    >> L
-  I                    >> U
-  O                    >> Z
-  Z                    >> Y
-  Shift{P}             >> Period
-  P                    >> Shift{Comma}
-  S                    >> R
-  D                    >> S
-  F                    >> T
-  G                    >> D
-  J                    >> N
-  K                    >> E
-  L                    >> I
-  Semicolon            >> O
-  N                    >> K
-
-  Shift{Quote}         >> Shift{2}
-  Quote                >> Shift{Backslash}
-  Shift{Period}        >> Shift{IntlBackslash}
-  Shift{Comma}         >> !Shift IntlBackslash
-  Shift{BracketLeft}   >> !Shift AltGr{7}
-  BracketLeft          >> AltGr{8}
-  Shift{BracketRight}  >> !Shift AltGr{0}
-  BracketRight         >> AltGr{9}
-  Shift{Backquote}     >> Equal Space
-  Backquote            >> AltGr{BracketRight}
-  Shift{2}             >> !Shift AltGr{Q}
-  Shift{3}             >> !Shift Backslash
-  Shift{6}             >> !Shift Backquote Space
-  Shift{7}             >> Shift{6}
-  Shift{8}             >> BracketRight
-  Shift{9}             >> Shift{8}
-  Shift{0}             >> Shift{9}
-  Minus                >> Slash
-  Shift{Equal}         >> !Shift BracketRight
-  Equal                >> Shift{0}
-  Shift{Backslash}     >> !Shift AltGr{IntlBackslash}
-  Backslash            >> AltGr{Minus}
-  Shift{Slash}         >> Shift{Minus}
-  Slash                >> Shift{7}
+  Shift{Quote}             >> '"'
+  Quote                    >> "'"
+  Shift{Comma}             >> '<'
+  Shift{Period}            >> '>'
+  Shift{BracketLeft}       >> '{'
+  BracketLeft              >> '['
+  Shift{BracketRight}      >> '}'
+  BracketRight             >> ']'
+  Shift{Backquote}         >> '` '
+  Backquote                >> '~'
+  Shift{2}                 >> '@'
+  Shift{3}                 >> '#'
+  Shift{6}                 >> '^ '
+  Shift{7}                 >> '&'
+  Shift{8}                 >> '*'
+  Shift{9}                 >> '('
+  Shift{0}                 >> ')'
+  Shift{Minus}             >> '_'
+  Minus                    >> '-'
+  Shift{Equal}             >> '+'
+  Equal                    >> '='
+  Shift{Backslash}         >> '|'
+  Backslash                >> '\'
+  Shift{Slash}             >> '?'
+  Slash                    >> '/'
 
   # default mappings for abstract commands
+  open_terminal        >> Any
+  suspend_machine      >> Any
+  poweroff_machine     >> Any
+  reboot_machine       >> Any
   close_window         >> !Win Alt{F4}
   navigate_escape      >> Escape
   cursor_home          >> !Control Home
@@ -161,7 +170,10 @@ ScrollLock >> Boss
   navigate_fore        >> Alt{ArrowRight}
   next_tab             >> !Win Control{PageUp}
   prev_tab             >> !Win Control{PageDown}
+  edit_copy            >> Control{C}
+  edit_cut             >> Control{X}
   edit_paste           >> Control{V}
+  edit_undo            >> Control{Y}
   edit_redo            >> !Shift Control{Z}
   build                >> Control{B}
   debug_step_over      >> F10
@@ -170,12 +182,18 @@ ScrollLock >> Boss
   edit_rename          >> F2
 
 # system/application specific mappings for abstract commands
+[system="MacOS"]
+  close_window         >> Meta{Q}
+  cursor_home          >> !Control Meta{ArrowLeft}
+  cursor_end           >> !Control Meta{ArrowRight}
+  edit_cut             >> Meta{X}
+  edit_copy            >> Meta{C}
+  edit_paste           >> Meta{V}
+  edit_undo            >> Meta{Y}
+  edit_redo            >> (Meta Shift){Y}
+
 [system="Linux"]
-  suspend_machine      >> (Win Control Alt){S}
-  poweroff_machine     >> (Win Control Alt){P}
-  reboot_machine       >> (Win Control Alt){R}
   lower_window         >> !Win (Alt Shift){PageDown}
-  open_terminal        >> Win{C}
 
 [system="Linux" class="Thunar"]
   cursor_home          >> Backspace
@@ -188,14 +206,14 @@ ScrollLock >> Boss
   open_terminal        >> !Win ContextMenu ^ Enter
 
 [system="Windows"]
-  suspend_machine      >> !Control !Alt Win{X} ^ R E
-  poweroff_machine     >> !Control !Alt Win{X} ^ R R
-  reboot_machine       >> !Control !Alt Win{X} ^ R N
+  suspend_machine      >> !Control !Alt Win{X} 300ms U S
+  poweroff_machine     >> !Control !Alt Win{X} 300ms U U
+  reboot_machine       >> !Control !Alt Win{X} 300ms U R
   lower_window         >> !Win Alt{Escape}
-  open_terminal        >> Win{R} ^ C M D Enter
+  open_terminal        >> $(start cmd)
 
 [system="Windows" class="CabinetWClass"] # Windows Explorer
-  open_terminal        >> F4 ^ Control{A} C M D Enter
+  open_terminal        >> F4 ^ Control{A} "cmd" Enter
 
 [title="Mozilla Firefox"]
   open_file            >> Control{K}
