Added RPM packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,6 +232,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   install(TARGETS keymapperd DESTINATION "bin" COMPONENT Application)
   install(DIRECTORY extra/share DESTINATION . COMPONENT Application)
   install(DIRECTORY extra/lib DESTINATION . COMPONENT Application)
+  install(DIRECTORY extra/xdg DESTINATION "../etc" COMPONENT Application)
 elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
   install(TARGETS keymapper DESTINATION "bin" COMPONENT Application)
   install(TARGETS keymapperd DESTINATION "bin" COMPONENT Application)
@@ -278,9 +279,9 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0")
   set(CPACK_DEBIAN_PACKAGE_SECTION utils)
-elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
-  set(CPACK_GENERATOR "DragNDrop")
-  set(CPACK_DMG_VOLUME_NAME "${PROJECT_NAME}")
+  set(CPACK_RPM_PACKAGE_REQUIRES "libudev, libusb")
+  set(CPACK_RPM_PACKAGE_LICENSE "GPL")
+  set(CPACK_RPM_PACKAGE_GROUP utils)
 endif()
 
 include(CPack)
