Some string typing fixes

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -101,12 +101,12 @@ ScrollLock >> Boss
   Win{Any}             >> Win{Any}
 
   # colemak layout mapping
-  AltGr{I}                 >> 'ü'
   (Shift AltGr){I}         >> 'Ü'
-  AltGr{A}                 >> 'ä'
+  AltGr{I}                 >> 'ü'
   (Shift AltGr){A}         >> 'Ä'
-  AltGr{Semicolon}         >> 'ö'
+  AltGr{A}                 >> 'ä'
   (Shift AltGr){Semicolon} >> 'Ö'
+  AltGr{Semicolon}         >> 'ö'
   AltGr{D}                 >> 'ß'
   AltGr{Backquote}         >> '°'
   
@@ -138,11 +138,11 @@ ScrollLock >> Boss
   BracketLeft              >> '['
   Shift{BracketRight}      >> '}'
   BracketRight             >> ']'
-  Shift{Backquote}         >> '` '
+  Shift{Backquote}         >> Equal Space  # '` '
   Backquote                >> '~'
   Shift{2}                 >> '@'
   Shift{3}                 >> '#'
-  Shift{6}                 >> '^ '
+  Shift{6}                 >> !Shift Backquote Space   # '^ '
   Shift{7}                 >> '&'
   Shift{8}                 >> '*'
   Shift{9}                 >> '('
