--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,13 +19,13 @@ jobs:
           - os: windows-latest
             package: WIX
 
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             package: TGZ
             
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             package: DEB
 
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             package: RPM
 
     steps:
@@ -35,14 +35,11 @@ jobs:
       with:
         arch: amd64_x86
 
-    - name: Setup Linux/gcc-8
+    - name: Setup Linux
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
         sudo apt-get install libudev-dev libusb-1.0-0-dev libx11-dev libdbus-1-dev libwayland-dev libxkbcommon-dev rpm
-        sudo apt-get install g++-8
-        echo 'CC=gcc-8' >> $GITHUB_ENV
-        echo 'CXX=g++-8' >> $GITHUB_ENV
 
     - name: Checkout
       uses: actions/checkout@v2
